--- a/style/base.scss
+++ b/style/base.scss
@@ -1,66 +1,108 @@
+html,
 body {
-    font-family: Helvetica, Sans-Serif;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: Helvetica, Sans-Serif;
+}
+
+.page-content {
+  width: 100%;
+  height: 100%;
+}
+
+.page-masthead {
+  height: 200px;
+  background-color: cornflowerblue;
+  padding: 10px;
+  text-align: center;
+
+  &-logo {
+    height: 100px;
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.page-title {
+  color: white;
+}
+
+.page-main {
+  margin-top: 20px;
+  text-align: center;
+  font-size: 1em;
 }
 
 .form-group {
-    position: relative;
+  position: relative;
 
-    & + .form-group {
-        margin-top: 30px;
-    }
+  & + .form-group {
+    margin-top: 30px;
+  }
 }
 
 .form-label {
-    position: absolute;
-    left: 0;
-    top: 10px;
-    color: #ccc;
-    background-color: #fff;
-    z-index: 10;
-    transition: transform 150ms ease-out, font-size 150ms ease-out;
+  position: absolute;
+  left: 0;
+  top: 10px;
+  color: #ccc;
+  background-color: #fff;
+  z-index: 10;
+  transition: transform 150ms ease-out, font-size 150ms ease-out;
 }
 
 .focused .form-label {
-    transform: translateY(-125%);
-    font-size: 0.75em;
+  transform: translateY(-125%);
+  font-size: 0.75em;
 }
 
 .form-input {
-    position: relative;
-    padding: 12px 0px 5px 0;
-    width: 100%;
-    outline: 0;
-    border: 0;
-    box-shadow: 0 1px 0 0 #e5e5e5;
-    transition: box-shadow 150ms ease-out;
-    font-size: 1em;
+  position: relative;
+  padding: 12px 0px 5px 0;
+  width: 100%;
+  outline: 0;
+  border: 0;
+  box-shadow: 0 1px 0 0 #e5e5e5;
+  transition: box-shadow 150ms ease-out;
+  font-size: 1em;
 
-    &:focus {
-        box-shadow: 0 2px 0 0 lightblue;
-    }
+  &:focus {
+    box-shadow: 0 2px 0 0 lightblue;
+  }
 }
 
 .form-input.filled {
-    box-shadow: 0 2px 0 0 palegreen;
+  box-shadow: 0 2px 0 0 palegreen;
 }
 
 .action-group {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    width: 100%;
-    margin-top: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 100%;
+  margin-top: 50px;
 }
 
 .action-button {
-    min-width: 100px;
-    text-align: center;
-    padding: 5px;
-    border: 1px solid lightgray;
-    color: dimgray;
-    background-color: #f0f5f5;
+  min-width: 100px;
+  text-align: center;
+  padding: 5px;
+  border: 1px solid lightgray;
+  color: dimgray;
+  background-color: #f0f5f5;
 
-    & + .action-button {
-        margin-left: 10px;
-    }
+  & + .action-button {
+    margin-left: 10px;
+  }
 }
