--- a/web/home/home.scss
+++ b/web/home/home.scss
@@ -1,35 +1,28 @@
-.page-content {
-  width: 100%;
-  height: 100%;
-}
+.home {
+  &__splash {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    background-color: dimgray;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 
-.home-masthead {
-  height: 200px;
-  background-color: cornflowerblue;
-  padding: 10px;
-  text-align: center;
+    &-image {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 500px;
+      object-fit: cover;
+      opacity: 0.3;
+    }
 
-  &-logo {
-    height: 100px;
-    animation: logo-spin infinite 20s linear;
+    &-title {
+      font-size: 5em;
+      color: white;
+      z-index: 2;
+    }
   }
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.home-title {
-  color: white;
-}
-
-.home-main {
-  margin-top: 20px;
-  text-align: center;
-  font-size: 1em;
 }
