--- a/web/search/search.scss
+++ b/web/search/search.scss
@@ -1,6 +1,6 @@
 .search {
   &__input {
-    width: 500px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -9,9 +9,9 @@
 
     &-text {
       width: 100%;
-      height: 2em;
+      height: 1.75em;
       padding: 0 1em 0 1em;
-      font-size: 1.5em;
+      font-size: 1.25em;
       color: dimgray;
       border: 1px solid lightgray;
       border-radius: 1em;
