--- a/web/home/home.scss
+++ b/web/home/home.scss
@@ -1,3 +1,5 @@
+@import '../../style/variables.scss';
+
 .home {
   &__splash {
     position: relative;
@@ -23,7 +25,7 @@
       font-size: 5em;
       color: white;
       z-index: 2;
-      text-shadow: 0 0 2px #333333;
+      text-shadow: 0 0 2px $primary-color;
     }
   }
 }
