--- a/web/search/search.scss
+++ b/web/search/search.scss
@@ -1,3 +1,5 @@
+@import '../../style/variables.scss';
+
 .search {
   &__input {
     width: 100%;
@@ -11,8 +13,8 @@
       width: 100%;
       height: 1.75em;
       padding: 0 1em 0 1em;
-      font-size: 1.25em;
-      color: dimgray;
+      font: 1.25em $light-font-stack;
+      color: $light-color;
       border: 1px solid lightgray;
       border-radius: 1em;
 
