--- a/web/components/Home/home.scss
+++ b/web/components/Home/home.scss
@@ -1,31 +1,19 @@
-@import '../../styles/variables.scss';
+// @import '../../styles/variables.scss';
 
 .home {
-  &__splash {
+  &__hero {
     position: relative;
     width: 100%;
-    height: 500px;
-    background-color: dimgray;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    height: 250px;
 
     &-image {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
-      height: 500px;
+      height: 250px;
       object-fit: cover;
-      opacity: 0.3;
-    }
-
-    &-title {
-      font-size: 5em;
-      color: white;
-      z-index: 2;
-      text-shadow: 0 0 2px $primary-color;
+      opacity: 0.6;
     }
   }
 }
