--- a/web/components/Search/search.scss
+++ b/web/components/Search/search.scss
@@ -10,13 +10,13 @@
     justify-content: center;
 
     &-text {
-      width: 100%;
       height: 1.75em;
       padding: 0 1em 0 1em;
-      font: 1.2em $light-font-stack;
+      font: 1.2em $font-stack-light;
       color: $light-color;
       border: 1px solid lightgray;
       border-radius: 1em;
+      flex-grow: 1;
 
       &::placeholder {
         color: lightgray;
