--- a/web/styles/base.scss
+++ b/web/styles/base.scss
@@ -1,13 +1,3 @@
-@font-face {
-  font-family: 'Muli';
-  src: url('../fonts/Muli-Regular.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Muli Light';
-  src: url('../fonts/Muli-Light.ttf') format('truetype');
-}
-
 @import './variables.scss';
 
 * {
@@ -34,78 +24,16 @@ a {
   text-decoration: none;
 }
 
-.page__content {
-  margin: 50px;
-  font-size: 1em;
+.button__cta {
+  height: 3em;
+  color: white;
+  padding: 0.5em 1em 0.5em 1em;
+  font: 1em $font-stack-light;
+  background-color: $primary-color-blue;
+  border: 1px solid $primary-color-blue;
+  border-radius: 1.5em;
 
-  &--center {
-    text-align: center;
-  }
-
-  &--left {
-    text-align: left;
+  &:hover {
+    cursor: pointer;
   }
 }
-
-// .form-group {
-//   position: relative;
-
-//   & + .form-group {
-//     margin-top: 30px;
-//   }
-// }
-
-// .form-label {
-//   position: absolute;
-//   left: 0;
-//   top: 10px;
-//   color: #ccc;
-//   background-color: #fff;
-//   z-index: 10;
-//   transition: transform 150ms ease-out, font-size 150ms ease-out;
-// }
-
-// .focused .form-label {
-//   transform: translateY(-125%);
-//   font-size: 0.75em;
-// }
-
-// .form-input {
-//   position: relative;
-//   padding: 12px 0px 5px 0;
-//   width: 100%;
-//   outline: 0;
-//   border: 0;
-//   box-shadow: 0 1px 0 0 #e5e5e5;
-//   transition: box-shadow 150ms ease-out;
-//   font-size: 1em;
-
-//   &:focus {
-//     box-shadow: 0 2px 0 0 lightblue;
-//   }
-// }
-
-// .form-input.filled {
-//   box-shadow: 0 2px 0 0 palegreen;
-// }
-
-// .action-group {
-//   display: flex;
-//   flex-direction: row;
-//   justify-content: flex-end;
-//   width: 100%;
-//   margin-top: 50px;
-// }
-
-// .action-button {
-//   min-width: 100px;
-//   text-align: center;
-//   padding: 5px;
-//   border: 1px solid lightgray;
-//   color: dimgray;
-//   background-color: #f0f5f5;
-
-//   & + .action-button {
-//     margin-left: 10px;
-//   }
-// }
