--- a/web/styles/variables.scss
+++ b/web/styles/variables.scss
@@ -1,5 +1,7 @@
 $font-stack: 'Muli', sans-serif;
-$light-font-stack: 'Muli Light', sans-serif;
+$font-stack-light: 'Muli Light', sans-serif;
 
 $primary-color: #333333;
 $light-color: #666666;
+
+$primary-color-blue: #4881ea;
