--- a/web/components/Landing/landing.scss
+++ b/web/components/Landing/landing.scss
@@ -5,20 +5,21 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    background-color: #696969aa;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url('../../images/home-hero.jpg');
+    background-image: url('../../images/landing-0.jpg');
     background-size: cover;
     background-blend-mode: lighten;
+    background-position: center;
 
     &-title {
       font-size: 5em;
       color: white;
       z-index: 2;
       text-shadow: 0 0 15px #404040;
+      margin-bottom: 10px;
     }
   }
 }
