--- a/web/components/ContentPage/content-page.scss
+++ b/web/components/ContentPage/content-page.scss
@@ -1,7 +1,8 @@
 .content-page {
   width: 100%;
   min-height: 100vh;
-  margin: 0px 0px 0px 0px;
+  max-width: 900px;
+  margin: 0px auto 0px auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
