--- a/web/components/Landing/landing.scss
+++ b/web/components/Landing/landing.scss
@@ -15,6 +15,7 @@
     background-position: center;
 
     &-title {
+      font-family: $font-stack-display;
       font-size: 5em;
       color: white;
       z-index: 2;
