--- a/web/components/Header/header.scss
+++ b/web/components/Header/header.scss
@@ -3,7 +3,7 @@
 .header {
   z-index: 3;
 
-  &__content {
+  &__area {
     position: fixed;
     top: 0;
     left: 0;
@@ -13,6 +13,12 @@
     background-color: $primary-color-blue;
     text-align: center;
     box-shadow: 0 3px 5px 0px dimgray;
+  }
+
+  &__content {
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
