--- a/web/components/Home/home.scss
+++ b/web/components/Home/home.scss
@@ -1,38 +1,49 @@
-// @import '../../styles/variables.scss';
+@import '../../styles/variables.scss';
 
 .home {
   &__container {
     position: relative;
     width: 100%;
+    background-color: #ffffff;
   }
 
   &__hero {
-    position: absolute;
+    // position: absolute;
     width: 100%;
-    height: 250px;
-    background-attachment: fixed;
-    background-image: url('../../images/home-1.jpg');
-    background-size: cover;
-    background-blend-mode: lighten;
-    background-position: left;
+    height: 375px;
+    color: #ffffff;
+    background-color: $primary-color;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    // background-attachment: fixed;
+    // background-image: url('../../images/home-1.jpg');
+    // background-size: cover;
+    // background-blend-mode: lighten;
+    // background-position: left;
     // TODO: Use a responsive image to fix image position
     // background-position-y: -450px;
 
     &-image {
-      position: absolute;
-      top: 0;
+      position: fixed;
+      top: $header-height;
       left: 0;
       width: 100%;
-      height: 250px;
+      height: 375px;
       object-fit: cover;
       opacity: 0.6;
+    }
+
+    &-title {
+      z-index: 2;
+      font-size: 5em;
+      color: #ffffff;
     }
   }
 
   &__main {
     position: relative;
-    // margin-top: 250px;
     z-index: 2;
-    background-color: white;
   }
 }
