--- a/web/styles/variables.scss
+++ b/web/styles/variables.scss
@@ -2,9 +2,9 @@ $font-stack-display: 'Bevan', sans-serif;
 $font-stack: 'Muli', sans-serif;
 $font-stack-light: 'Muli Light', sans-serif;
 
-$primary-color: #333333;
-$light-color: #666666;
-
-$primary-color-blue: #4881ea;
+$color-primary: #333333;
+$color-light: #666666;
+$color-white: #ffffff;
+$color-blue: #4881ea;
 
 $header-height: 75px;
