--- a/web/components/Footer/footer.scss
+++ b/web/components/Footer/footer.scss
@@ -4,7 +4,7 @@
   width: 100%;
   margin: 50px 0 0px 0;
   padding: 0px 0 10px 0;
-  color: $primary-color;
+  color: $color-primary;
   font-size: 0.5em;
   text-align: center;
 }
