--- a/web/components/Home/home.scss
+++ b/web/components/Home/home.scss
@@ -4,26 +4,18 @@
   &__container {
     position: relative;
     width: 100%;
-    background-color: #ffffff;
+    background-color: $color-white;
   }
 
   &__hero {
-    // position: absolute;
     width: 100%;
     height: 375px;
-    color: #ffffff;
-    background-color: $primary-color;
+    color: $color-white;
+    background-color: $color-primary;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    // background-attachment: fixed;
-    // background-image: url('../../images/home-1.jpg');
-    // background-size: cover;
-    // background-blend-mode: lighten;
-    // background-position: left;
-    // TODO: Use a responsive image to fix image position
-    // background-position-y: -450px;
 
     &-image {
       position: fixed;
@@ -37,13 +29,21 @@
 
     &-title {
       z-index: 2;
-      font-size: 5em;
-      color: #ffffff;
+      font-size: 4em;
+      color: $color-white;
     }
   }
 
   &__main {
     position: relative;
     z-index: 2;
+  }
+}
+
+@media (min-width: 576px) {
+  .home {
+    &__hero-title {
+      font-size: 5em;
+    }
   }
 }
