--- a/web/components/Search/search.scss
+++ b/web/components/Search/search.scss
@@ -13,7 +13,7 @@
       height: 1.75em;
       padding: 0 1em 0 1em;
       font: 1.2em $font-stack-light;
-      color: $light-color;
+      color: $color-light;
       border: 1px solid lightgray;
       border-radius: 1em;
       flex-grow: 1;
