--- a/web/components/nav-bar/nav-bar.scss
+++ b/web/components/nav-bar/nav-bar.scss
@@ -1,8 +1,19 @@
 .navbar {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  & > ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  & > ul {
+    padding-left: 0.5em;
+    list-style: none;
+  }
+
+  & > ul > li + li {
+    margin-top: 0.5em;
+  }
 
   &__link {
     padding: 0 1em 0 1em;
@@ -10,6 +21,20 @@
 
     & > .active {
       color: #cdf3fe;
+    }
+  }
+}
+
+@media (min-width: 576px) {
+  .navbar {
+    & > ul {
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+    }
+
+    & > ul > li + li {
+      margin-top: 0;
     }
   }
 }
