--- a/web/components/page-content/page-content.scss
+++ b/web/components/page-content/page-content.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables.scss';
+
 .page-content {
   width: 100%;
   min-height: 100vh;
@@ -16,7 +18,7 @@
     width: 100%;
     margin: 0px auto 0px auto;
     padding: 50px 50px 0 50px;
-    background-color: #ffffff;
+    background-color: $color-white;
     flex-grow: 1;
   }
 }
