--- a/web/styles/base.scss
+++ b/web/styles/base.scss
@@ -13,10 +13,12 @@ body {
 
 body {
   font: 1em $font-stack;
-  color: $primary-color;
+  color: $color-primary;
 }
 
+button,
 input:focus {
+  border: none;
   outline: 0;
 }
 
@@ -31,8 +33,8 @@ a {
   color: white;
   padding: 0.5em 1em 0.5em 1em;
   font: 1em $font-stack-light;
-  background-color: $primary-color-blue;
-  border: 1px solid $primary-color-blue;
+  background-color: $color-blue;
+  border: 1px solid $color-blue;
   border-radius: 1.5em;
 
   &:hover {
