--- a/web/components/Header/header.scss
+++ b/web/components/Header/header.scss
@@ -1,9 +1,8 @@
-@import '../../styles/variables.scss';
+@import 'styles/variables.scss';
 
 .header {
-  z-index: 3;
-
   &__visible {
+    z-index: 3;
     position: fixed;
     top: 0;
     left: 0;
@@ -56,10 +55,10 @@
   }
 
   &__mobile-nav {
+    z-index: 2;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 2;
     max-height: $header-height;
     width: 100%;
     overflow: hidden;
