--- a/web/components/login/login.scss
+++ b/web/components/login/login.scss
@@ -10,12 +10,17 @@
 
   &__fields {
     width: 100%;
-    margin-top: 2em;
+    margin-top: 1.5em;
     border: none;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+  }
+
+  &__link {
+    font-size: 0.8em;
+    color: $color-blue;
   }
 
   &__cta-section {
@@ -24,49 +29,9 @@
     justify-content: space-evenly;
     align-items: center;
     margin-top: 2em;
-  }
-}
 
-.form {
-  &__input-group {
-    position: relative;
-    margin-top: 1em;
-
-    &.focused .form__label {
-      transform: translateY(-125%);
-      font-size: 0.75em;
+    & .login__link {
+      margin-top: 0.25em;
     }
-  }
-
-  &__label {
-    position: absolute;
-    left: 0;
-    top: 15px;
-    color: #999;
-    background-color: $color-white;
-    z-index: 10;
-    transition: transform 150ms ease-out, font-size 150ms ease-out;
-  }
-
-  &__input {
-    position: relative;
-    padding: 12px 0px 5px 0;
-    width: 100%;
-    outline: 0;
-    border: 0;
-    box-shadow: 0 1px 0 0 #e5e5e5;
-    transition: box-shadow 150ms ease-out;
-    font-family: $font-stack;
-    font-size: 1.2em;
-
-    &:focus {
-      box-shadow: 0 2px 0 0 lightblue;
-    }
-  }
-
-  &__link {
-    margin-top: 0.5em;
-    font-size: 0.75em;
-    color: $color-blue;
   }
 }
