--- a/web/components/text-input/text-input.scss
+++ b/web/components/text-input/text-input.scss
@@ -3,18 +3,51 @@
 .text-input {
   &__group {
     position: relative;
-    margin-top: 1em;
+    margin-top: 1.5em;
 
-    &.focused .text-input__label {
-      transform: translateY(-125%);
-      font-size: 0.75em;
+    &.text-input--filled {
+      & .text-input__label {
+        transform: translateY(-125%);
+        font-size: 0.75em;
+      }
+    }
+
+    &.text-input--error {
+      & .text-input__error-icon {
+        display: inherit;
+      }
+
+      & .text-input__field {
+        box-shadow: 0 2px 0 0 #eb2d53;
+      }
+    }
+  }
+
+  &__error-icon {
+    display: none;
+    z-index: 1;
+    position: relative;
+    font-size: 1.2em;
+    color: #eb2d53;
+    animation: attention 5s forwards infinite;
+  }
+
+  @keyframes attention {
+    2% {
+      transform: scale(1.1);
+    }
+    4% {
+      transform: scale(0.9);
+    }
+    6% {
+      transform: scale(1);
     }
   }
 
   &__label {
     position: absolute;
     left: 0;
-    top: 15px;
+    top: 0.9em;
     color: #999;
     background-color: $color-white;
     z-index: 10;
