Add test authentication API, PrivateRoute, TextInput on Search page, thunk

--- a/web/components/text-input/text-input.scss
+++ b/web/components/text-input/text-input.scss
@@ -3,7 +3,12 @@
 .text-input {
   &__group {
     position: relative;
-    margin-top: 1.5em;
+    width: inherit;
+    // margin-top: 1.5em;
+
+    & + & {
+      margin-top: 1.5em;
+    }
 
     &.text-input--filled {
       & .text-input__label {
