--- a/web/components/Search/search.scss
+++ b/web/components/Search/search.scss
@@ -9,13 +9,14 @@
     flex-direction: row;
     justify-content: center;
 
-    &-text {
-      height: 1.75em;
-      padding: 0 1em 0 1em;
-      font: 1.2em $font-stack-light;
+    & &-text {
+      height: 2em;
+      width: 100%;
+      padding: 0;
+      font: 2em $font-stack-light;
       color: $color-light;
-      border: 1px solid lightgray;
-      border-radius: 1em;
+      border: none;
+      // box-shadow: 0 1px 0 0 #e5e5e5;
       flex-grow: 1;
 
       &::placeholder {
