--- a/web/components/text-input/text-input.scss
+++ b/web/components/text-input/text-input.scss
@@ -12,7 +12,7 @@
 
     &.text-input--filled {
       & .text-input__label {
-        transform: translateY(-125%);
+        transform: translateY(-110%);
         font-size: 0.75em;
       }
     }
@@ -34,18 +34,34 @@
     position: relative;
     font-size: 1.2em;
     color: #eb2d53;
-    animation: attention 5s forwards infinite;
+    animation: attention 5s linear forwards infinite;
   }
 
   @keyframes attention {
-    2% {
-      transform: scale(1.1);
+    from {
+      transform: scale3d(1, 1, 1);
     }
-    4% {
-      transform: scale(0.9);
+
+    82%,
+    84% {
+      transform: scale3d(0.9, 0.9, 0.9) rotate3d(0, 0, 1, -3deg);
     }
-    6% {
-      transform: scale(1);
+
+    86%,
+    90%,
+    94%,
+    98% {
+      transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
+    }
+
+    88%,
+    92%,
+    96% {
+      transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
+    }
+
+    to {
+      transform: scale3d(1, 1, 1);
     }
   }
 
